[Feature] Redid some elements of navigation to allow horizontal scrolling (e.g. when a certain language is much wider). Also fixed visual bugs with search bar.

--- a/style/style-critical.css
+++ b/style/style-critical.css
@@ -545,6 +545,7 @@
 	/* 2° (TOP NAV): HOME BUTTON */
 	.secondary-nav__home {
 		background-color: hsl(var(--accent));
+		background-color: hsl(var(--vkgy-red));
 		/*background-image:
 			url('/style/vkgy_cage.png'),
 			url('/style/vkgy_text.png');
@@ -601,6 +602,7 @@
 			-46px 1px,
 			-46px bottom;
 		color: hsl(var(--accent));
+		color: hsl(var(--vkgy-red));
 	}
 	/*#language-ja:checked ~ .secondary-nav__wrapper .secondary-nav__home:hover {
 		background-position:
@@ -610,6 +612,7 @@
 	.secondary-nav__home::after {
 		border: 0 solid transparent;
 		border-top-color: hsl(var(--accent));
+		border-top-color: hsl(var(--vkgy-red));
 		border-width: 0.5rem 23px 0 23px;
 		content: "";
 		display: block;
@@ -769,35 +772,117 @@
 	}
 	.primary-nav__container {
 		display: grid;
-		grid-template-columns: [links] 1fr [additional] auto;
+		grid-template-columns: [home] calc(46px - 0ch) [links] minmax(0, 1fr) [additional] auto [search-button] min-content;
 	}
 	@media(min-width: 800px) {
 		.primary-nav__container {
-			grid-template-columns: [links] 1fr [search] 1fr [additional] 1fr;
+			grid-template-columns: [home] calc(46px - 0ch) [links] minmax(max-content, 1fr) [search] 1fr [additional] 1fr [search-button] min-content;
+			justify-content: space-between;
 		}
 	}
 
 
 	/* 1° (SITE NAV): LEFT */
-	.primary-nav__links {
-		flex-wrap: wrap;
+
+.primary-nav__container::before {
+	--bg-dir: to left;
+	left: 0;
+}
+.primary-nav__container::after {
+	--bg-dir: to right;
+	right: 0;
+}
+	.primary-nav__container::after,
+	.primary-nav__container::before {
+		background-image:
+			linear-gradient(var(--bg-dir), hsla(var(--background),0), hsla(var(--background),1)),
+			linear-gradient(var(--bg-dir), hsla(var(--background),0), hsla(var(--background),1));
+		bottom: 2px;
+		content: "";
+		display: block;
 		grid-column: links;
 		grid-row: 1;
+		pointer-events: none;
+		position: absolute;
+		top: 0;
+		width: 1rem;
+		width: 1ch;
+		z-index: 1;
 	}
+.primary-nav__container::after {
+	width: 1rem;
+}
+	.primary-nav__links {
+		grid-column: links;
+		grid-row: 1;
+		/*margin-bottom: -8px;
+		padding-bottom: 10px;
+		padding-right: 1rem;
+		overflow-x: auto;
+		overflow: scroll;
+		white-space: nowrap;*/
+	}
+/*.primary-nav__links::after {
+	background: transparent;
+	content: "";
+	display: block;
+	flex: none;
+	height: 10px;
+	width: 1rem;
+}*/
+/* Scrollbar */
+.primary-nav__links {
+	margin-bottom: -8px;
+	padding-bottom: 10px;
+}
+.primary-nav__links .simplebar-wrapper {
+	white-space: nowrap;
+	width: 100%;
+}
+.primary-nav__link:first-of-type {
+}
+.primary-nav__link:last-of-type {
+	margin-right: 1rem;
+}
+/* Scrollbar for main nav
+.primary-nav__links {
+	scrollbar-width: 10px;
+	scrollbar-color: blue red;
+}
+.primary-nav__links::-webkit-scrollbar {
+	height: 10px;
+	background: transparent;
+}
+.primary-nav__links::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background-color: rgba(0,0,0,0);
+	opacity: 0;
+	transition: background-color 0.1s linear;
+}
+	.primary-nav__links:hover::-webkit-scrollbar-thumb {
+	background-color: rgba(0,0,0,0.5);
+	}
+.primary-nav__links::-webkit-scrollbar-track {
+	background: transparent;
+}*/
 	.primary-nav__link {
 		background-position: 0 1.1rem;
 	}
-	.primary-nav__link[href="/blog/"] {
+	/*.primary-nav__link[href="/blog/"] {
 		display: none;
 	}
 	@media(min-width: 500px) {
 		.primary-nav__link[href="/blog/"] {
 			display: initial;
 		}
-	}
+	}*/
 	.primary-nav__home {
 		align-self: stretch;
 		background: currentColor;
+		display: inline-block;
+		flex: none;
+		grid-column: home;
+		grid-row: 1;
 		height: 2rem;
 		-webkit-mask-image: url('/style/sprite-cage.png');
 		-webkit-mask-position: center;
@@ -805,6 +890,7 @@
 		-webkit-mask-size: contain;
 		text-align: center;
 		width: 46px;
+		z-index: 2;
 	}
 	.primary-nav__home:not(:hover) {
 		color: hsl(var(--accent));
@@ -825,6 +911,7 @@
 
 	/* 1° (SITE NAV): SEARCH */
 	.primary-nav__search {
+		margin: 0 1ch;
 		text-indent: 1.25rem;
 		z-index: 201;
 	}
@@ -845,12 +932,13 @@
 	}
 	.primary-nav__search-symbol {
 		pointer-events: none;
-		margin-left: 0.5rem;
+		margin-left: calc(1ch + 0.5rem);
 		z-index: 202;
 	}
 	.primary-nav__search-button {
 		box-shadow: -0.5rem 0 0 0 hsl(var(--background)), -0.5rem -2px 0 0 hsl(var(--background)), -0.5rem 2px 0 0 hsl(var(--background));
-		grid-column: additional;
+		box-shadow: calc(-.5rem - 1px) 0 0 0 hsl(var(--background));
+		grid-column: search-button;
 		grid-row: 1;
 		margin-left: auto;
 		overflow: hidden;
@@ -859,25 +947,29 @@
 	}
 	.primary-nav--searching .primary-nav__search,
 	.primary-nav__search:active,
-	.primary-nav__search:focus {
+	.primary-nav__search:focus,
+	.primary-nav__search:active + .primary-nav__search-symbol,
+	.primary-nav__search:focus + .primary-nav__search-symbol {
 		grid-column: 1 / -1;
-		margin-left: 46px;
+		grid-column: links / search-button;
+		/*margin-left: 46px;*/
 	}
 	.primary-nav--searching .primary-nav__search-symbol,
 	.primary-nav__search:active + .primary-nav__search-symbol,
 	.primary-nav__search:focus + .primary-nav__search-symbol {
-		grid-column: 1 / -1;
-		margin-left: calc(46px + 0.5rem);
+		/*grid-column: 1 / -1;*/
+		/*margin-left: calc(46px + 0.5rem);*/
+		/*box-shadow: 0 0 3px blue;*/
 	}
-	.primary-nav--searching .primary-nav__search,
-	.primary-nav--searching .primary-nav__search-symbol,
-	.primary-nav--searching .primary-nav__search-button,
+	.primary-nav--searching [class*="primary-nav__search"],
 	.primary-nav__search:active,
 	.primary-nav__search:focus,
-	.primary-nav__search:active + .primary-nav__search-symbol,
+	/*.primary-nav__search:active + .primary-nav__search-symbol,
 	.primary-nav__search:focus + .primary-nav__search-symbol,
 	.primary-nav__search:active ~ .primary-nav__search-button,
-	.primary-nav__search:focus ~ .primary-nav__search-button,
+	.primary-nav__search:focus ~ .primary-nav__search-button,*/
+	.primary-nav__search:active ~ [class*="primary-nav__search"],
+	.primary-nav__search:focus ~ [class*="primary-nav__search"],
 	.primary-nav__search-button:hover,
 	.primary-nav__search-button:active,
 	.primary-nav__search-button:focus {
